# complex_evaluate

./: .gitignore  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
api/: index.html
citation/: index.html
docs/: api.md  citation.md  index.md  installation.md  usage.md
examples/: metric.ipynb
installation/: index.html
search/: search_index.json
src/complex_evaluate/: evaluate.py  uted.py
tests/: test_evaluate.py  test_uted.py
usage/: index.html
